--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>This site was create by me enterpsise it uses data from mapbox.com and weatherstock.com</p>
     <img src="/img/dadada.jpg" alt="swag" class="portrait">
 
   </div>
