Added a button to get users local weather

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,10 +13,13 @@
     {{>header}}
 
     <p>Use this site to get your weather!</p>
+    <p>Enter a location below to get the weather for it.</p>
     <form>
       <input placeholder="Location">
       <button>Search</button>
     </form>
+    <p>Or press the button below to instantly get the weather based on your location!</p>
+    <button id="getUserWeather">What's my weather?</button>
 
     <p id="message-1"></p>
     <p id="message-2"></p>
